# oracle-of-the-abyss

./: .gitignore  .gitignore.txt  Architecture.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
docs/: index.html  oracle.html  search.js
docs/oracle/: analyzer.html  api.html  domain_objects.html  main.html  parser.html  poem_model.html  syllable_counter.html  utils.html
frontend/: .env.production  VITE_SETUP_REFERENCE.md  index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AnalysisOutputBox.jsx  UserInputBox.jsx
oracle/: __init__.py  analyzer.py  api.py  devices.py  domain_objects.py  main.py  parser.py  poem_model.py  syllable_counter.py  syllable_pattern.py  utils.py
oracle/analysis/: base.py
oracle/intern/: lookout.py
tests/: stupid poem.txt  test_analyzer.py  test_api.py  test_base.py  test_devices.py  test_domain_objects.py  test_main.py  test_parser.py  test_poem_model.py  test_syllable_counter.py  test_syllable_pattern.py  test_utils.py
user poems/: The Serpent.txt  The Serpent_analysis.txt
