[project]
name = "oracle-of-the-abyss"
version = "0.1.0"
description = "poem analyzer program aimed at counting syllables, stanzas, lines, checking rhyme scheme, etc."
authors = [
    {name = "Magister Opiter",email = "cerberkan@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nltk (>=3.9.2,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
