[tool.poetry]
name = "oracle-of-the-abyss"
version = "0.1.0"
description = "poem analyzer program aimed at counting syllables, stanzas, lines, checking rhyme scheme, etc."
authors = ["Magister Opiter <cerberkan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "oracle"}]

[tool.poetry.dependencies]
python = "^3.13"
nltk = "^3.9.2"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.18.0"
pytest-cov = "^7.0.0"
pdoc = "^16.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"